modify readme file and add github link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
        <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 <%= yield %>
-
+<br>  
+<a href="https://github.com/Passionate/devise_stackoverflow">Hosted on github</a>
 </body>
 </html>
